--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,40 @@
+name: Deploy Laravel App
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Código
+        uses: actions/checkout@v3
+
+      - name: Configurar SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.VELPROD_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p ${{ secrets.VELPROD_SERVER_PORT }} -H ${{ secrets.VELPROD_SERVER_IP }} >> ~/.ssh/known_hosts
+
+      - name: Probar conexión SSH desde GitHub Actions
+        run: ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p ${{ secrets.VELPROD_SERVER_PORT }} ${{ secrets.VELPROD_SERVER_USER }}@${{ secrets.VELPROD_SERVER_IP }} "echo Conexión Exitosa"
+
+      - name: Desplegar en el Servidor
+        run: |
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p ${{ secrets.VELPROD_SERVER_PORT }} ${{ secrets.VELPROD_SERVER_USER }}@${{ secrets.VELPROD_SERVER_IP }} << 'EOF'
+            cd /var/www/pruebas
+            git pull origin main
+            composer install --no-dev --optimize-autoloader
+            php artisan migrate --force
+            php artisan cache:clear
+            php artisan config:clear
+            php artisan queue:restart
+            chown -R www-data:www-data storage bootstrap/cache
+            chmod -R 775 storage bootstrap/cache
+            systemctl restart php8.1-fpm
+          EOF
 
