--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy Laravel App
 on:
   push:
     branches:
-      - main
-
+      - master
+ 
 jobs:
   deploy:
     runs-on: ubuntu-latest
